# safe_pocket

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  install.sh
FEATURES/: 00.md  01.md
src/: cli.rs  config.rs  hash.rs  main.rs  manifest.rs  safe_pocket.code-workspace  template.rs  workspace.rs
src/defaults/: AGENTS.md  copilot-instructions.md  directory_structure.md  gitignore.md  project.env.md  safe_pocket.env.md  safe_pocket.gitignore.md
src/defaults/prompts/: TalkLikeACat.prompt.md
vscode-extension/: package-lock.json  package.json  spocket-0.1.0.vsix
vscode-extension/src/: extension.ts
